# slackat

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: main.yml
server/: .env.sample  Cargo.toml  Migrant.toml  README.md  sqlx-data.json
server/migrations/20210530152830_init/: down.sql  up.sql
server/migrations/20210530153227_truncate-fn/: down.sql  up.sql
server/migrations/20210530153400_user-tokens/: down.sql  up.sql
server/migrations/20210602033638_user-info/: down.sql  up.sql
server/src/: crypto.rs  logging.rs  main.rs  models.rs  service.rs  slack.rs  utils.rs
web/: README.md
